fix(docs): Resolve an issue where the table of contents would be too high on tablet view

--- a/docs/themes/default/assets/css/base.css
+++ b/docs/themes/default/assets/css/base.css
@@ -29,6 +29,7 @@ body.has-toc {
       "sidebar toc"
       "sidebar main";
     grid-template-columns: 20rem 1fr;
+    grid-template-rows: auto auto 1fr;
   }
 }
 
